--- a/test/fixtures/beers.yml
+++ b/test/fixtures/beers.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-bells1:
+pbr:
   name: pbr
   description: 'Only the best'
 
-bells2:
+bells_oberon:
   name: oberon
   description: 'Still damn good'
