--- a/test/fixtures/bars.yml
+++ b/test/fixtures/bars.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
+the_earl:
   name: earl
   address: MyString
   zip: 1
   state: MyString
   description: MyText
 
-two:
+midway:
   name: midway
   address: MyString
   zip: 1
