added brickstore and porter import scripts

--- a/brickstore_draught_menu.yml
+++ b/brickstore_draught_menu.yml
@@ -1,4 +1,20 @@
 ---
+- - 21 St Amendment/Ninkasi Allies Win The War 
+  - Strong Dark
+  - San Francisco, Ca
+  - 16oz
+  - 8.5%
+  - $5.50
+  - ! "\n                            \n                        "
+  - ''
+- - Allagash Big Little Beer 
+  - Belgian Pale
+  - Belgium
+  - .4 L
+  - 5.5%
+  - $6.00
+  - ! "\n                            \n                        "
+  - ''
 - - Allagash White 
   - Witbier
   - Portland Me.
@@ -7,37 +23,30 @@
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - Avery Ipa 
-  - Ipa
-  - Boulder Co.
-  - 20oz.
-  - 7.5%
-  - $5.00
-  - ! "\n                            \n                        "
-  - ''
-- - Bells Sparkling Ale 
-  - Tripel
-  - Kalamazoo,Mi
+- - Bells Hell Hath No Fury 
+  - Strong Dark
+  - Kalamazoo
   - 14oz
-  - 9.0%
+  - 7.5%
   - $6.00
   - ! "\n                            \n                        "
   - ''
-- - Brooklyn Black Chocolate 
-  - Stout
-  - Brooklyn, N.Y.
-  - .4 L
-  - 10.6%
-  - $5.00
+- - Dieu De Ciel Rescousse 
+  - Altbier
+  - Canada
+  - 12oz
+  - 5.0%
+  - $6.00
   - ! "\n                            \n                        "
   - ''
-- - Great Divide Fresh Hop 
-  - Ipa
-  - Denver,Co
-  - 16oz
-  - 6.1%
-  - $5.00
-  - ! "\n                            \n                        "
+- - Einbecker Urbock 
+  - Maibock
+  - Germany
+  - .2 L
+  - 6.5%
+  - $3.00
+  - ! "\n                            Nice,Mild,Light Cocoa And Cinnamon,Rounded Maltiness,Nice
+    And Easy Drinking @ 6.5%\n                        "
   - ''
 - - Guinness 
   - Stout
@@ -47,46 +56,37 @@
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - Heavy Seas Smoke On The Water 
-  - Porter
-  - Baltimore Md.
+- - Hebrew Hop Manna 
+  - Ipa
+  - San Francisco, Ca
   - 16oz
-  - 8.0%
+  - 6.8%
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - Port High Tide 
+- - Hebrew Jewbelation 13 Rye Barrel Aged 
+  - Strong Ale
+  - San Francisco, Ca
+  - 10 Oz.
+  - 13.0%
+  - $5.00
+  - ! "\n                            \n                        "
+  - ''
+- - Oskar Blues' Dale's  
+  - Pale Ale
+  - Colorado
+  - 20oz
+  - '6.5'
+  - $5.00
+  - ! "\n                            \n                        "
+  - ''
+- - Port Wipeout 
   - Ipa
   - San Diego
   - 16oz
-  - 6.5%
+  - 7.0%
   - $6.00
   - ! "\n                            \n                        "
-  - ''
-- - Red Brick Porter 
-  - Porter
-  - Atlanta,Ga.
-  - 16oz
-  - 7.5%
-  - $4.50
-  - ! "\n                            \n                        "
-  - ''
-- - Reissdorf 
-  - Kolsch
-  - Germany
-  - .4 L
-  - 4.8%
-  - $5.00
-  - ! "\n                            \n                        "
-  - ''
-- - Rogue Dead Guy Ale 
-  - Maibock
-  - Newport, Or.
-  - 20oz
-  - 6.0%
-  - $4.75
-  - ! "\n                            Lovely English Style Bitter. Es Bish,Malty,Hoppy
-    And A Perfect Choice For Halloween.\n                        "
   - ''
 - - Schneider Aventinus 
   - Weizen Bock
@@ -96,19 +96,19 @@
   - $7.00
   - ! "\n                            \n                        "
   - ''
-- - St. Ambroise Mccauslan Oatmeal  Stout *Nitro 
-  - Stout
-  - Canada
-  - 16oz
-  - 5.0%
+- - Sweetwater Ipa 
+  - Ipa
+  - Atlanta, Ga
+  - .5 L
+  - 6.4%
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - Terrapin/Heavy Seas Free Spirit 
-  - Saison
-  - Athens, Ga.
-  - 14oz
-  - 6.0%
+- - Terrapin Wake & Bake 
+  - Imperial Stout
+  - Athens,Ga
+  - 12oz
+  - 7.9%
   - $5.00
   - ! "\n                            \n                        "
   - ''
@@ -136,12 +136,20 @@
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - De Hoevbrouwers Toria 
-  - Pale Ale
+- - Caracole Saxo 
+  - Strong Pale
   - Belgium
   - .3 L
-  - 6.5%
+  - 8.0%
   - $7.00
+  - ! "\n                            \n                        "
+  - ''
+- - Dupont Posca Rustica 
+  - Spiced Ale
+  - Belgium
+  - .3 L
+  - 6.0%
+  - $8.00
   - ! "\n                            \n                        "
   - ''
 - - Gouden Carolous  
@@ -160,19 +168,11 @@
   - $7.00
   - ! "\n                            \n                        "
   - ''
-- - Houblon Chouffe 
-  - Belgian Ipa
-  - Belgium
-  - .3 L
-  - 9%
-  - $7.00
-  - ! "\n                            \n                        "
-  - ''
-- - Klein De Glazen Saison D'erpe Mere 
-  - Saison
+- - Liefmans Oude Bruin 
+  - Old Bruin
   - Belgium
   - .25 L
-  - 7.2%
+  - 5.0%
   - $7.00
   - ! "\n                            \n                        "
   - ''
