got 'whenever' working to import the items

--- a/brickstore_draught_menu.yml
+++ b/brickstore_draught_menu.yml
@@ -1,52 +1,28 @@
 ---
-- - 21 St Amendment/Ninkasi Allies Win The War 
-  - Strong Dark
-  - San Francisco, Ca
-  - 16oz
+- - Allagash Hugh Malone 
+  - Belgian Ipa
+  - Portland,Me
+  - .25 L
   - 8.5%
-  - $5.50
-  - ! "\n                            \n                        "
+  - $4.00
+  - ! "\n                            Delicate Sweet Malts And Light Fruits Lead To
+    Earthy And Pungent Hops. A Rare Treat From Maine.\n                        "
   - ''
-- - Allagash Big Little Beer 
-  - Belgian Pale
-  - Belgium
-  - .4 L
-  - 5.5%
+- - Founders Breakfast Stout 
+  - Imperial Stout
+  - Grand Rapids Mi
+  - 18oz
+  - 8.3%
   - $6.00
   - ! "\n                            \n                        "
   - ''
-- - Allagash White 
-  - Witbier
-  - Portland Me.
-  - .4 L
-  - 5.0%
+- - Great Divide Hibernation 
+  - Strong Ale
+  - Denver,Co
+  - 16oz.
+  - 8.1%
   - $5.00
   - ! "\n                            \n                        "
-  - ''
-- - Bells Hell Hath No Fury 
-  - Strong Dark
-  - Kalamazoo
-  - 14oz
-  - 7.5%
-  - $6.00
-  - ! "\n                            \n                        "
-  - ''
-- - Dieu De Ciel Rescousse 
-  - Altbier
-  - Canada
-  - 12oz
-  - 5.0%
-  - $6.00
-  - ! "\n                            \n                        "
-  - ''
-- - Einbecker Urbock 
-  - Maibock
-  - Germany
-  - .2 L
-  - 6.5%
-  - $3.00
-  - ! "\n                            Nice,Mild,Light Cocoa And Cinnamon,Rounded Maltiness,Nice
-    And Easy Drinking @ 6.5%\n                        "
   - ''
 - - Guinness 
   - Stout
@@ -56,28 +32,20 @@
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - Hebrew Hop Manna 
-  - Ipa
-  - San Francisco, Ca
+- - North Coast Old Rasputin Nitro 
+  - Imperial Stout
+  - Fort Bragg Ca.
   - 16oz
-  - 6.8%
-  - $5.00
+  - 9.0%
+  - $6.00
   - ! "\n                            \n                        "
   - ''
-- - Hebrew Jewbelation 13 Rye Barrel Aged 
-  - Strong Ale
-  - San Francisco, Ca
-  - 10 Oz.
-  - 13.0%
-  - $5.00
-  - ! "\n                            \n                        "
-  - ''
-- - Oskar Blues' Dale's  
-  - Pale Ale
-  - Colorado
-  - 20oz
-  - '6.5'
-  - $5.00
+- - Ommegang Adoration 
+  - Strong Dark
+  - Cooperstown, Ny
+  - .25 L
+  - 10.0%
+  - $6.00
   - ! "\n                            \n                        "
   - ''
 - - Port Wipeout 
@@ -88,27 +56,19 @@
   - $6.00
   - ! "\n                            \n                        "
   - ''
-- - Schneider Aventinus 
-  - Weizen Bock
-  - Germany
-  - .5 L
-  - 9.4%
-  - $7.00
-  - ! "\n                            \n                        "
-  - ''
-- - Sweetwater Ipa 
-  - Ipa
-  - Atlanta, Ga
-  - .5 L
-  - 6.4%
+- - Sierra Nevada Celebration 
+  - Winter Ale
+  - Chico,Ca
+  - 20oz.
+  - 6.8%
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - Terrapin Wake & Bake 
-  - Imperial Stout
-  - Athens,Ga
-  - 12oz
-  - 7.9%
+- - Sweetwater Festive 
+  - Winter Ale
+  - Atlanta, Ga.
+  - 16 Oz.
+  - 8.6%
   - $5.00
   - ! "\n                            \n                        "
   - ''
@@ -136,32 +96,24 @@
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - Caracole Saxo 
-  - Strong Pale
+- - Affligem Noel  
+  - Strong Dark
   - Belgium
   - .3 L
-  - 8.0%
+  - 9%
   - $7.00
   - ! "\n                            \n                        "
   - ''
-- - Dupont Posca Rustica 
-  - Spiced Ale
+- - Dupont Monks Stout 
+  - English Stout
   - Belgium
   - .3 L
-  - 6.0%
+  - 5.5%
   - $8.00
   - ! "\n                            \n                        "
   - ''
-- - Gouden Carolous  
-  - Tripel
-  - Belgium
-  - .25 L
-  - 9.0%
-  - $7.00
-  - ! "\n                            \n                        "
-  - ''
-- - Gulden Draak 
-  - Dark Tripel
+- - Gouden Carolous Noel  
+  - Strong Dark
   - Belgium
   - .25 L
   - 10.5%
@@ -176,11 +128,27 @@
   - $7.00
   - ! "\n                            \n                        "
   - ''
-- - Oud Beersel Framboise 
-  - Lambic
+- - N'ice Chouffe 
+  - Strong Winter
   - Belgium
   - .25 L
-  - 6.0%
-  - $6.00
+  - 10.0%
+  - $8.00
+  - ! "\n                            \n                        "
+  - ''
+- - Petrus Winterbier 
+  - Pale Ale
+  - Belgium
+  - .25 L
+  - 6.5%
+  - $7.00
+  - ! "\n                            \n                        "
+  - ''
+- - St. Bernardus Abt. 12 
+  - Quadruppel
+  - Belgium
+  - .25 L
+  - 10.0%
+  - $7.00
   - ! "\n                            \n                        "
   - ''
