removes old listings from the database after import

--- a/brickstore_draught_menu.yml
+++ b/brickstore_draught_menu.yml
@@ -1,12 +1,19 @@
 ---
-- - Allagash Hugh Malone 
-  - Belgian Ipa
-  - Portland,Me
-  - .25 L
-  - 8.5%
-  - $4.00
-  - ! "\n                            Delicate Sweet Malts And Light Fruits Lead To
-    Earthy And Pungent Hops. A Rare Treat From Maine.\n                        "
+- - Allagash Big Little Beer 
+  - Belgian Pale
+  - Belgium
+  - .4 L
+  - 5.5%
+  - $6.00
+  - ! "\n                            \n                        "
+  - ''
+- - Bells Christmas 
+  - Scotch Ale
+  - Kalamazoo, Mi.
+  - 16 Oz
+  - 5.8%
+  - $5.25
+  - ! "\n                            \n                        "
   - ''
 - - Founders Breakfast Stout 
   - Imperial Stout
@@ -14,14 +21,6 @@
   - 18oz
   - 8.3%
   - $6.00
-  - ! "\n                            \n                        "
-  - ''
-- - Great Divide Hibernation 
-  - Strong Ale
-  - Denver,Co
-  - 16oz.
-  - 8.1%
-  - $5.00
   - ! "\n                            \n                        "
   - ''
 - - Guinness 
@@ -32,37 +31,69 @@
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - North Coast Old Rasputin Nitro 
-  - Imperial Stout
-  - Fort Bragg Ca.
-  - 16oz
-  - 9.0%
-  - $6.00
+- - Heavy Seas Winter Storm 
+  - Esb
+  - Baltimore Md
+  - 16oz.
+  - 7.5%
+  - $4.75
   - ! "\n                            \n                        "
   - ''
-- - Ommegang Adoration 
-  - Strong Dark
-  - Cooperstown, Ny
-  - .25 L
-  - 10.0%
-  - $6.00
-  - ! "\n                            \n                        "
-  - ''
-- - Port Wipeout 
-  - Ipa
-  - San Diego
-  - 16oz
-  - 7.0%
-  - $6.00
-  - ! "\n                            \n                        "
-  - ''
-- - Sierra Nevada Celebration 
+- - Highland Cold Mtn.Winter 
   - Winter Ale
+  - Asheville,Nc.
+  - 20 Oz.
+  - 6.0%
+  - $5.00
+  - ! "\n                            \n                        "
+  - ''
+- - Mikkeller Black Hole Bourbon 
+  - Imperial Stout
+  - Denmark
+  - .3 L
+  - 13.1%
+  - $8.00
+  - ! "\n                            \n                        "
+  - ''
+- - Oskar Blues Ten Fidy Smidy 
+  - Stout
+  - Lyons, Co
+  - 16oz
+  - 5.4%
+  - $6.00
+  - ! "\n                            \n                        "
+  - ''
+- - Port Santas Little Helper 
+  - Imperial Stout
+  - San Diego, Ca
+  - 12oz
+  - 10%
+  - $5.00
+  - ! "\n                            \n                        "
+  - ''
+- - Reissdorf 
+  - Kolsch
+  - Germany
+  - .4 L
+  - 4.8%
+  - $5.00
+  - ! "\n                            \n                        "
+  - ''
+- - Schneider Aventinus 
+  - Weizenbock
+  - Germany
+  - .5 L
+  - 9.4%
+  - $7.00
+  - ! "\n                            \n                        "
+  - ''
+- - Sierra Nevada Celebration  
+  - ! 'Ipa* '
   - Chico,Ca
   - 20oz.
   - 6.8%
   - $5.00
-  - ! "\n                            \n                        "
+  - ! "\n                            * Thanks For Getting Me Fired Andrew!\n                        "
   - ''
 - - Sweetwater Festive 
   - Winter Ale
@@ -70,6 +101,14 @@
   - 16 Oz.
   - 8.6%
   - $5.00
+  - ! "\n                            \n                        "
+  - ''
+- - Terrapin Hopsecutioner 
+  - Ipa
+  - Athens Ga
+  - 16oz
+  - 7.3%
+  - $4.75
   - ! "\n                            \n                        "
   - ''
 - - Victory Prima Pils 
@@ -96,19 +135,35 @@
   - $5.00
   - ! "\n                            \n                        "
   - ''
-- - Affligem Noel  
+- - Avec Les Bons Voeux 
+  - Saison
+  - Belgium
+  - .3 L
+  - 9.5%
+  - $8.00
+  - ! "\n                            \n                        "
+  - ''
+- - Christmas Leroy 
   - Strong Dark
   - Belgium
   - .3 L
-  - 9%
+  - 6.8%
   - $7.00
   - ! "\n                            \n                        "
   - ''
-- - Dupont Monks Stout 
-  - English Stout
+- - Corsendonk Christmas 
+  - Winter Ale
   - Belgium
   - .3 L
-  - 5.5%
+  - 8.5%
+  - $7.00
+  - ! "\n                            \n                        "
+  - ''
+- - Deranke Pere Noel 
+  - Strong Ale
+  - Belgium
+  - .3 L
+  - 8.5%
   - $8.00
   - ! "\n                            \n                        "
   - ''
@@ -120,14 +175,6 @@
   - $7.00
   - ! "\n                            \n                        "
   - ''
-- - Liefmans Oude Bruin 
-  - Old Bruin
-  - Belgium
-  - .25 L
-  - 5.0%
-  - $7.00
-  - ! "\n                            \n                        "
-  - ''
 - - N'ice Chouffe 
   - Strong Winter
   - Belgium
@@ -136,19 +183,11 @@
   - $8.00
   - ! "\n                            \n                        "
   - ''
-- - Petrus Winterbier 
-  - Pale Ale
-  - Belgium
-  - .25 L
-  - 6.5%
-  - $7.00
-  - ! "\n                            \n                        "
-  - ''
-- - St. Bernardus Abt. 12 
+- - Scaldis Noel 
   - Quadruppel
   - Belgium
   - .25 L
-  - 10.0%
-  - $7.00
+  - 12.0%
+  - $8.00
   - ! "\n                            \n                        "
   - ''
